<resources>
    <string name="app_name">Picture of the day</string>
    <string name="wikipedia">wikipedia</string>
    <string name="day_before_yesterday">day before</string>
    <string name="yesterday">yesterday</string>
    <string name="today">today</string>
    <string name="menu_main">main</string>
    <string name="menu_mars">mars</string>
    <string name="menu_settings">settings</string>
    <string name="explanation">Explanation</string>
    <string name="settings">Settings</string>
    <string name="moon_theme">Moon theme</string>
    <string name="mars_theme">Mars theme</string>
    <string name="milky_way_theme">Milky way theme</string>
    <string name="epic">EPIC</string>
    <string name="video_title">Watch video in youtube</string>
    <string name="list">List</string>
    <string name="hello">Hello! You can use the buttons below to navigate</string>
</resources>