<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/menu_main"
        android:icon="@drawable/ic_launcher_foreground"
        android:orderInCategory="10"
        android:title="@string/menu_main"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_epic"
        android:icon="@android:drawable/ic_menu_camera"
        android:orderInCategory="10"
        android:title="@string/epic"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_mars"
        android:icon="@drawable/ic_send"
        android:orderInCategory="20"
        android:title="@string/menu_mars"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_settings_menu"
        android:orderInCategory="100"
        android:title="@string/menu_settings"
        app:showAsAction="ifRoom" />
</menu>