<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/settings"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/themes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/moon"
            style="@style/ChipStyle.Base"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moon_theme" />

        <com.google.android.material.chip.Chip
            android:id="@+id/mars"
            style="@style/ChipStyle.Base"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mars_theme" />

        <com.google.android.material.chip.Chip
            android:id="@+id/milkyWay"
            style="@style/ChipStyle.Base"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/milky_way_theme" />

    </com.google.android.material.chip.ChipGroup>

</androidx.constraintlayout.widget.ConstraintLayout>