<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/wiki_container"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:passwordToggleDrawable="@drawable/ic_wiki"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/wiki"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints=""
                android:hint="@string/wikipedia"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.chip.Chip
            android:id="@+id/day_before_yesterday"
            style="@style/Widget.MaterialComponents.Chip.Action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day_before_yesterday"
            app:layout_constraintEnd_toStartOf="@id/yesterday"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/yesterday" />

        <com.google.android.material.chip.Chip
            android:id="@+id/yesterday"
            style="@style/Widget.MaterialComponents.Chip.Action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/yesterday"
            app:layout_constraintEnd_toStartOf="@id/today"
            app:layout_constraintStart_toEndOf="@id/day_before_yesterday"
            app:layout_constraintTop_toBottomOf="@id/wiki_container" />

        <com.google.android.material.chip.Chip
            android:id="@+id/today"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/today"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/yesterday"
            app:layout_constraintTop_toTopOf="@id/yesterday" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/picture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_max="@dimen/picture_max_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/day_before_yesterday"
            tools:srcCompat="@drawable/ic_no_photo_vector" />

        <TextView
            android:id="@+id/title_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/picture"
            tools:text="Описание фото" />

        <FrameLayout
            android:id="@+id/loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.8"
            android:background="@color/black"
            tools:visibility="gone">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/bot"
        layout="@layout/bottom_sheet" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>